# tryb3

./: AUTHENTICATION_IMPLEMENTATION.md  Caddyfile  README.md  analysis_options.yaml  pubspec.yaml  widgetbook.dart
android/app/: build.gradle.kts
docs/: DATA_PERSISTENCE.md  FLUTTER_STANDARDS.md  README.md  STATE_MANAGEMENT.md  index.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: auth_demo.dart  demo_calendar.dart  desktop_app.dart  enhanced_chat_demo.dart  main.dart  tryb3_demo.dart
lib/core/constants/: app_constants.dart
lib/core/router/: app_router.dart  app_router.g.dart
lib/tux/: tux.dart
lib/widgetbook/: animation_showcase.dart  media_showcase.dart  widgetbook_app.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
services/django/: .env  db.sqlite3  manage.py  pyproject.toml
services/django/notifications/: models.py  serializers.py  services.py  urls.py  views.py
services/django/notifications/migrations/: 0001_initial.py  0002_initial.py
services/django/tryb3/: asgi.py  settings.py  urls.py  wsgi.py
services/django/users/: models.py  serializers.py  urls.py  views.py
services/django/users/migrations/: 0001_initial.py
services/django/websocket_api/: apps.py  consumers.py  routing.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+115 files in other folders)
